k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kartify-backend
  namespace: kartify
  labels:
    app: kartify-backend
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: kartify-backend
